--- a/style/base.css
+++ b/style/base.css
@@ -2,15 +2,19 @@
   box-sizing: border-box;
 }
 
-html {
-  display: inline;
-}
-
 body {
   width: 480px;
   background-color: rgb(201, 186, 186);
   margin: 0px auto;
   text-align: center;
+}
+
+span {
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 @media (min-width: 768px) {
@@ -20,5 +24,12 @@ body {
     background-color: grey;
     margin: 0px auto;
     text-align: center;
+  }
+  span {
+    position: absolute;
+    top: 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
