--- a/style/layout.css
+++ b/style/layout.css
@@ -1,104 +1,105 @@
+
 div {
-  float: left;
   border: solid 1px;
   position: relative;
+  align-items: center;
 }
 
 #a {
-  width: 480px;
-  height: 75px;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
 }
 
 #b {
-  width: 480px;
-  height: 150px;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
 }
 
 #c {
-  width: 480px;
-  height: 125px;
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 
 #d {
-  width: 480px;
-  height: 125px;
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
 
 #e {
-  width: 240px;
-  height: 250px;
+  grid-column: 1 / 2;
+  grid-row: 5 / 6;
 }
 
 #f {
-  width: 240px;
-  height: 250px;
+  grid-column: 2 / 3;
+  grid-row: 5 / 6;
 }
 
 #g {
-  width: 240px;
-  height: 250px;
+  grid-column: 1 / 2;
+  grid-row: 6 / 7;
 }
 
 #h {
-  width: 240px;
-  height: 250px;
+  grid-column: 2 / 3;
+  grid-row: 6 / 7;
 }
 
 #i {
-  width: 480px;
-  height: 80px;
+  grid-column: 1 / 3;
+  grid-row: 7 / 8;
 }
 
-@media (min-width: 768px) {
+ @media (min-width: 768px) {
 
   div {
-    float: left;
     border: solid 1px;
     position: relative;
+    align-items: center;
   }
-
+  
   #a {
-    width: 960px;
-    height: 100px;
+    grid-column: 1 / 6;
+    grid-row: 1 / 2;
   }
-
+  
   #b {
-    width: 200px;
-    height: 600px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
   }
   
   #c {
-    width: 380px;
-    height: 200px;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
   }
   
   #d {
-    width: 380px;
-    height: 200px;
+    grid-column: 4 / 6;
+    grid-row: 2 / 3;
   }
   
   #e {
-    width: 190px;
-    height: 250px;
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
   }
   
   #f {
-    width: 190px;
-    height: 250px;
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
   }
   
   #g {
-    width: 190px;
-    height: 250px;
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
   }
   
   #h {
-    width: 190px;
-    height: 250px;
+    grid-column: 5 / 6;
+    grid-row: 3 / 4;
   }
-
+  
   #i {
-    width: 760px;
-    height: 150px;
+    grid-column: 2 / 6;
+    grid-row: 4 / 5;
   }
-}
+ }
