--- a/style/module.css
+++ b/style/module.css
@@ -1,37 +1,76 @@
 div#a {
-  background-color: hotpink;
+  background-color: rgb(135, 2, 68);
 }
 
 div#b {
-  background-color: rgb(146, 208, 143);
+  background-color: rgb(8, 140, 1);
 }
 
 div#c {
-  background-color: rgb(101, 183, 245);
+  background-color: rgb(0, 75, 133);
 }
 
 div#d {
-  background-color: rgb(233, 93, 93);
+  background-color: rgb(130, 2, 2);
 }
 
 div#e {
-  background-color: rgb(145, 53, 176);
+  background-color: rgb(92, 0, 123);
 }
 
 div#f {
-  background-color: rgb(255, 163, 105);
+  background-color: rgb(135, 52, 0);
 }
 
 div#g {
-  background-color: rgb(223, 255, 105);
+  background-color: rgb(100, 128, 0);
 }
 
 div#h {
-  background-color: rgb(105, 135, 255);
+  background-color: rgb(0, 28, 142);
 }
 
 div#i {
-  background-color: rgb(105, 233, 255);
+  background-color: rgb(0, 119, 140);
+}
+
+@media (min-width: 425px) {
+  
+  div#a {
+    background-color: rgb(133, 71, 71);
+  }
+  
+  div#b {
+    background-color: rgb(157, 96, 58);
+  }
+  
+  div#c {
+    background-color: rgb(150, 150, 79);
+  }
+  
+  div#d {
+    background-color: rgb(134, 150, 74);
+  }
+  
+  div#e {
+    background-color: rgb(62, 133, 111);
+  }
+  
+  div#f {
+    background-color: rgb(52, 86, 104);
+  }
+  
+  div#g {
+    background-color: rgb(89, 75, 121);
+  }
+  
+  div#h {
+    background-color: rgb(120, 64, 120);
+  }
+  
+  div#i {
+    background-color: rgb(131, 68, 99);
+  }  
 }
 
 @media (min-width: 768px) {
